tests/neg/parse_error.scala
class Main {
  val x: Int = format("this is a integer: %d", 0)

  def main = {
    0
  }
}